--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,8 +2,8 @@
     border: none;
     border-radius: 0;
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: "Terminus (TTF)";
-    font-size: 12px;
+    font-family: "Monoid";
+    font-size: 9px;
     min-height: 0;
 }
 
@@ -43,26 +43,29 @@ window#waybar.firefox {
 }
 
 #workspaces button {
-    padding: 0 5px;
-    background-color: transparent;
+    padding: 0 3px;
+    background: none;
     color: #ffffff;
     /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
+    /* box-shadow: inset 0 -3px transparent; */
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
     background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 -3px #666666;
+    /* box-shadow: inset 0 -3px #666666; */
 }
 
 #workspaces button.focused {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
+    background: none;
+    /* box-shadow: inset 0 -3px #ffffff; */
+    color: #66cc99;
+    border: 1px solid #66cc99;
+    /* border-color: #66cc99; */
 }
 
 #workspaces button.urgent {
-    background-color: #eb4d4b;
+    border: 2px solid #eb4d4b;
 }
 
 #mode {
@@ -73,10 +76,9 @@ window#waybar.firefox {
 #clock,
 #battery,
 #custom-media,
-#mode,
-#mpd {
-    padding: 0 10px;
-    margin: 0 4px;
+#mode {
+    padding: 0 7px;
+    margin: 0 1px;
     color: #ffffff;
 }
 
@@ -90,23 +92,24 @@ window#waybar.firefox {
 /*     margin-left: 4px; */
 /* } */
 
-/* If workspaces is the rightmost module, omit right margin 
+/* If workspaces is the rightmost module, omit right margin
 .modules-right > widget:last-child > #workspaces {
     margin-right: 4px;
 } */
 
 #clock {
-    background-color: #64727D;
+    background: none;
 }
 
 #battery {
-    background-color: #64727D;
+    background: none;
     color: #f8f8f8;
 }
 
 #battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
+    color: #66cc99;
+    /* background: none; */
+    /* border: 2px solid #26A65B; */
 }
 
 @keyframes blink {
@@ -117,8 +120,8 @@ window#waybar.firefox {
 }
 
 #battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
+    background: none;
+    color: #f53c3c;
     animation-name: blink;
     animation-duration: 0.5s;
     animation-timing-function: linear;
@@ -135,4 +138,3 @@ label:focus {
     color: #2a5c45;
     min-width: 100px;
 }
-
