--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -10,6 +10,8 @@
 window#waybar {
     background-color: rgba(0, 0, 0, 0.3);
     /* border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
+    margin-left: 10px;
+    margin-right: 10px;
     color: #ffffff;
     transition-property: background-color;
     transition-duration: .3s;
@@ -19,10 +21,11 @@ window#waybar.hidden {
     opacity: 0.2;
 }
 
-/*
+
 window#waybar.empty {
     background-color: transparent;
 }
+/*
 window#waybar.solo {
     background-color: #FFFFFF;
 }
@@ -42,6 +45,7 @@ window#waybar.firefox {
     border: none;
 }
 
+#tags button,
 #workspaces button {
     padding: 0 3px;
     background: none;
@@ -51,19 +55,22 @@ window#waybar.firefox {
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+#tags button.occupied,
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+    background: #1d214f;
+    border: none;
     /* box-shadow: inset 0 -3px #666666; */
 }
 
+#tags button.focused,
 #workspaces button.focused {
     background: none;
-    /* box-shadow: inset 0 -3px #ffffff; */
     color: #66cc99;
     border: 1px solid #66cc99;
-    /* border-color: #66cc99; */
+    padding: 0 7px;
 }
 
+#tags button.urgent,
 #workspaces button.urgent {
     border: 2px solid #eb4d4b;
 }
@@ -73,7 +80,6 @@ window#waybar.firefox {
     border-bottom: 3px solid #ffffff;
 }
 
-#clock,
 #battery,
 #custom-media,
 #mode {
@@ -82,8 +88,10 @@ window#waybar.firefox {
     color: #ffffff;
 }
 
+
 #window,
-#workspaces {
+#workspaces,
+#tags {
     margin: 0 8px;
 }
 
@@ -92,18 +100,21 @@ window#waybar.firefox {
 /*     margin-left: 4px; */
 /* } */
 
-/* If workspaces is the rightmost module, omit right margin
+/* If workspaces is the rightmost module, fucking hardcode right margin
 .modules-right > widget:last-child > #workspaces {
-    margin-right: 4px;
-} */
+    margin-right: 8px;
+}
+*/
 
 #clock {
-    background: none;
+    margin-left: 10px;
+    padding: 0 7px;
+    background: #1d214f;
 }
 
 #battery {
     background: none;
-    color: #f8f8f8;
+    padding: 0 7px;
 }
 
 #battery.charging, #battery.plugged {
